--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,349 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{khan2025elastic,
+	title={Elastic nonreciprocity via nonreciprocal hybridization and destructive interference},
+	author={Khan, Muhammad Bilal and Sugino, Christopher},
+	journal={Physical Review Applied},
+	volume={23},
+	number={1},
+	pages={014028},
+	year={2025},
+	publisher={APS},
+	month = "1",
+	url = {https://doi.org/10.1103/PhysRevApplied.23.014028}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{allamUltrasonic,
+	author = "Ahmed Allam and Obaidullah Alfahmi and Herit Patel and Christopher Sugino and Matthew Harding and Massimo Ruzzene and Alper Erturk",
+	title = "Ultrasonic testing of thick and thin {Inconel} 625 Alloys manufactured by laser powder bed fusion",
+	journal = "Ultrasonics",
+	volume = "125",
+	pages = "106780",
+	year = "2022",
+	month = "9",
+	url = "https://doi.org/10.1016/j.ultras.2022.106780"}
+
+
+@article{thomes2023programmable,
+	title={Programmable Moving Defect for Spatiotemporal Wave Localization in Piezoelectric Metamaterials},
+	author={Thomes, Renan L and Beli, Danilo and Sugino, Christopher and Erturk, Alper and Junior, Carlos De Marqui},
+	journal={Physical Review Applied},
+	volume={19},
+	number={6},
+	pages={064031},
+	year={2023},
+	publisher={APS},
+	month = "6",
+	url = {https://doi.org/10.1103/PhysRevApplied.19.064031}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{alfahmi2022duffing,
+	title={Duffing-type digitally programmable nonlinear synthetic inductance for piezoelectric structures},
+	author={Alfahmi, Obaidullah and Sugino, Christopher and Erturk, Alper},
+	journal={Smart Materials and Structures},
+	volume={31},
+	number={9},
+	pages={095044},
+	year={2022},
+	publisher={IOP Publishing},
+	month = "8",
+	url = {https://doi.org/10.1088/1361-665X/ac858b}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@article{suginoSpatially,
+	author = "Christopher Sugino and Mustafa Alshaqaq and Alper Erturk",
+	title = "Spatially programmable wave compression and signal enhancement in a piezoelectric metamaterial waveguide",
+	journal = "Physical Review B",
+	volume = "106",
+	year = "2022",
+	month = "11",
+	pages = "174304",
+	url = {https://doi.org/10.1103/PhysRevB.106.174304}}
+
+@article{alshaqaq2023digital,
+	title={Digital programming of reciprocity breaking in resonant piezoelectric metamaterials},
+	author={Alshaqaq, Mustafa and Sugino, Christopher and Erturk, Alper},
+	journal={Physical Review Research},
+	volume={5},
+	number={4},
+	pages={043003},
+	year={2023},
+	publisher={APS},
+	url = "https://doi.org/10.1103/PhysRevResearch.5.043003"
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{allam2024portable,
+	title={Portable through-metal ultrasonic power transfer using a dry-coupled detachable transmitter},
+	author={Allam, A and Patel, H and Sugino, C and John, C St and Steinfeldt, J and Reinke, C and Erturk, A and El-kady, I},
+	journal={Ultrasonics},
+	pages={107339},
+	year={2024},
+	publisher={Elsevier},
+	url = "https://doi.org/10.1016/j.ultras.2024.107339"
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{alshaqaqProgrammable,
+	author = "Mustafa Alshaqaq and Christopher Sugino and Alper Erturk",
+	title = "Programmable Rainbow Trapping and Band-Gap Enhancement via Spatial Group-Velocity Tailoring in Elastic Metamaterials",
+	journal = "Physical Review Applied",
+	year = "2022",
+	month = "2",
+	volume = "17",
+	url = {https://doi.org/10.1103/PhysRevApplied.17.L021003}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{khattakConcurrent,
+	author = "Mohid Muneeb Khattak and Christopher Sugino and Alper Erturk",
+	title = "Concurrent vibration attenuation and low-power electricity generation in a locally resonant metastructure",
+	journal = "Journal of Intelligent Material Systems and Structures",
+	year = "2022",
+	month = "1",
+	url = {https://doi.org/10.1177/1045389X211072517}}
+
+@article{suginoMachined,
+	author = "Christopher Sugino and Romain Gerbe and Ehren Baca and Charles Reinke and Massimo Ruzzene and Alper Erturk and Ihab {El-kady}",
+	title = "Machined phononic crystals to block high-order {L}amb waves and crosstalk in through-metal ultrasonic communication systems",
+	journal = "Applied Physics Letters",
+	year = "2022",
+	volume = "120",
+	month = "5",
+	url = {https://doi.org/10.1063/5.0083380}
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+@article{allamPhasedArray,
+	author = "Ahmed Allam and Christopher Sugino and Matthew Harding and Paul Bishop and Alper Erturk and Massimo Ruzzene",
+	title = "Phased array ultrasonic testing of Inconel 625 produced by selective laser melting",
+	journal = "ASME Journal of Nondestructive Evaluation, Diagnostics, and Prognostics of Engineering Systems",
+	year = "2021",
+	volume = "4",
+	number = "4",
+	month = "5",
+	url = {https://doi.org/10.1115/1.4050963}}
+
+@article{suginoReciprocal,
+	author = "Christopher Sugino and Massimo Ruzzene and Alper Erturk",
+	title = "Nonreciprocal piezoelectric metamaterial framework and circuit strategies",
+	journal = "Physical Review B",
+	volume = "102",
+	year = "2020",
+	month = "7",
+	url = {https://doi.org/10.1103/PhysRevB.102.014304}}
+
+@article{mazzotiExperimental,
+	author = "Matteo Mazzoti and Christopher Sugino and Eetu Kohtanen and Alper Erturk and Massimo Ruzzene",
+	title = "Experimental identification of high order Lamb waves and estimation of the mechanical properties of a dry human skull",
+	journal = "Ultrasonics",
+	volume = "113",
+	pages = "106343",
+	url = {https://doi.org/10.1016/j.ultras.2020.106343},
+	year = "2021",
+	month = "5"}
+
+@article{suginoSynth,
+	author = "Christopher Sugino and Massimo Ruzzene and Alper Erturk",
+	title = "Digitally programmable resonant elastic metamaterials",
+	journal = "Physical Review Applied",
+	volume = "13",
+	number = "6",
+	pages={061001},
+	year = "2020",
+	month = "6",
+	url = {https://doi.org/10.1103/PhysRevApplied.13.061001}}
+
+@article{suginoSkull,
+	author = "Christopher Sugino and Massimo Ruzzene and Alper Erturk",
+	title = "Experimental and computational investigation of guided waves in a human skull",
+	journal = "Ultrasound in Medicine and Biology",
+	volume = "47",
+	number = "3",
+	year = "2020",
+	month = "12",
+	url = {https://doi.org/10.1016/j.ultrasmedbio.2020.11.019}}
+
+@article{suginoIJSS,
+	author = "Christopher Sugino and Massimo Ruzzene and Alper Erturk",
+	title = "An analytical framework for bandgap formation in locally resonant piezoelectric metamaterial plates",
+	year = "2019",
+	month = "8",
+	volume = "182-183",
+	pages = "281 - 294",
+	journal = "International Journal of Solids and Structures",
+	url = {https://doi.org/10.1016/j.ijsolstr.2019.08.011}}
+
+@article{sugino,
+	author = "Christopher Sugino and Stephen Leadenham and Massimo Ruzzene and Alper Erturk",
+	title = "On the mechanism of bandgap formation in locally resonant finite elastic metamaterials",
+	year = "2016",
+	volume = "120",
+	number = "13",
+	pages = "134501",
+	journal = "Journal of Applied Physics",
+	url = {https://doi.org/10.1063/1.4963648}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{sugino2,
+	author = "Christopher Sugino and Stephen Leadenham and Massimo Ruzzene and Alper Erturk",
+	title = "An investigation of electroelastic bandgap formation in locally resonant piezoelectric metastructures",
+	year = "2017",
+	journal = "Smart Materials and Structures",
+	volume = "26",
+	number = "5",
+	pages = "055029",
+	month = "4",
+	url = {https://doi.org/10.1088/1361-665X/aa6671}}
+
+@article{sugino3,
+	author = "Christopher Sugino and Yiwei Xia and Stephen Leadenham and Massimo Ruzzene and Alper Erturk",
+	title = "A general theory for bandgap estimation in locally resonant metastructures",
+	journal = "Journal of Sound and Vibration",
+	volume = "406",
+	pages = "104--123 (2021 Doak Award)",
+	year = "2017",
+	month = "10",
+	url = {https://doi.org/10.1016/j.jsv.2017.06.004}}
+
+@article{sugino2018design,
+	author = "Christopher Sugino and Massimo Ruzzene and Alper Erturk",
+	title = "Design and analysis of piezoelectric metamaterial beams with synthetic impedance shunt circuits",
+	journal = "IEEE/ASME Transactions on Mechatronics",
+	volume = "23",
+	year = "2018",
+	month = "12",
+	pages = "2144--2155",
+	url = {https://doi.org/10.1109/TMECH.2018.2863257}}
+
+@article{sugino2018Merging,
+	author = "Christopher Sugino and Massimo Ruzzene and Alper Erturk",
+	title = "Merging mechanical and electromechanical bandgaps in locally resonant metamaterials and metastructures",
+	journal = "Journal of the Mechanics and Physics of Solids",
+	year = "2018",
+	volume = "116",
+	pages = "323--333",
+	month = "7",
+	url = {https://doi.org/10.1016/j.jmps.2018.04.005}}
+
+
+@article{sugino2018analysis,
+	author = "Christopher Sugino and Alper Erturk",
+	title = "Analysis of multifunctional piezoelectric metastructures for low-frequency bandgap formation and energy harvesting",
+	journal = "Journal of Physics D: Applied Physics",
+	year = "2018",
+	volume = "51",
+	issue = "21",
+	pages = "215103",
+	month = "5",
+	url = {https://doi.org/10.1088/1361-6463/aab97e}}
+
+@article{sousa2018adaptive,
+	author = "Vagner {Candido de Sousa} and Christopher Sugino and De Marqui, Jr., Carlos and Alper Erturk",
+	title = "Adaptive locally resonant metamaterials leveraging shape memory alloys",
+	journal = "Journal of Applied Physics",
+	volume = "124",
+	issue = "6",
+	pages = "064505",
+	year = "2018",
+	month = "9",
+	url = {https://doi.org/10.1063/1.5031168}}
+
+@article{sugino2020ius,
+	author = "Christopher Sugino and Romain Gerbe and Charles Reinke and Massimo Ruzzene and Alper Erturk and Ihab El-Kady",
+	title = "Ultrasonic Communication through a Metallic Barrier: Transmission Modeling and Crosstalk Minimization",
+	journal = "2020 IEEE International Ultrasonics Symposium (IUS)",
+	year = "2020",
+	month = "3"
+}
+
+
+@article{sugino2019imac1,
+	author = "Christopher Sugino and Massimo Ruzzene and Alper Erturk",
+	title = "Characterization of Lamb Wave Propagation in Human Skull via Scanning LDV",
+	journal = " Proceedings of IMAC-XXXVII, Houston, TX",
+	year = "2019",
+	month = "3"
+}
+
+@article{sugino2021spie1,
+	author = "Christopher Sugino and Mustafa Alshaqaq and Alper Erturk",
+	title = "Programmable Piezoelectric Acoustic Black Hole for Wavelength Control and Enhanced Sensing",
+	journal = "Proceedings of the 28th SPIE Annual International Symposium on Smart Structures and Materials {\&} Nondestructive Evaluation and Health Monitoring",
+	year = "2021",
+	month = "5" }
+
+@article{sugino2021spie2,
+	author = "Mustafa Alshaqaq and Christopher Sugino and  Alper Erturk",
+	title = "Rainbow trapping of elastic waves in a programmable metamaterial beam",
+	journal = "Proceedings of the 28th SPIE Annual International Symposium on Smart Structures and Materials {\&} Nondestructive Evaluation and Health Monitoring",
+	year = "2021",
+	month = "4" }
+
+@article{sugino2021spie3,
+	author = "Mohid Khattak and Christopher Sugino and Alper Erturk",
+	title = "Experimental and numerical investigation of piezoelectric energy harvesting on a locally resonant metastructure",
+	journal = "Proceedings of the 28th SPIE Annual International Symposium on Smart Structures and Materials {\&} Nondestructive Evaluation and Health Monitoring",
+	year = "2021",
+	month = "3" }
+
+
+@article{sugino2019spie,
+	author = "Christopher Sugino and Massimo Ruzzene and Alper Erturk",
+	title = "An analytical framework for Kirchhoff plate-type locally resonant piezoelectric metastructures",
+	journal = "Proceedings of the 26th SPIE Annual International Symposium on Smart Structures and Materials {\&} Nondestructive Evaluation and Health Monitoring, Denver, CO",
+	year = "2019",
+	month = "3"
+}
+
+
+@article{sugino2018spie,
+	author = "Christopher Sugino and Alper Erturk",
+	title = "Dispersion tailoring in varying-inductance piezoelectric metamaterials",
+	journal = "Proceedings of the 25th SPIE Annual International Symposium on Smart Structures and Materials {\&} Nondestructive Evaluation and Health Monitoring, Denver, CO",
+	year = "2018",
+	month = "3"
+}
+
+@article{sugino2017eccomas,
+	author = "Christopher Sugino and Massimo Ruzzene and Alper Erturk",
+	title = "Merging Mechanical and Electromechanical Locally Resonant Bandgaps in Metamaterials",
+	journal = "Proceedings of the 8th ECCOMAS Thematic Conference on Smart Structures and Materials, Madrid, Spain",
+	year = "2017",
+	month = "6"}
+
+@article{sugino2017smasis,
+	author = "Christopher Sugino and Massimo Ruzzene and Alper Erturk",
+	title ="Dynamics of hybrid mechanical-electromechanical locally resonant metastructures",
+	journal = "Proceedings of the 10th ASME Conference on Smart Materials, Adaptive Structures and Intelligent Systems, Snowbird, UT",
+	year = "2017",
+	month = "9"}
+
+@article{sugino2017asmasis,
+	author = "Christopher Sugino and Vinciane Guillot and Alper Erturk",
+	title = "Multifunctional Energy Harvesting Locally Resonant Metastructures",
+	journal = "Proceedings of the 10th ASME Conference on Smart Materials, Adaptive Structures, and Intelligent Systems, Snowbird, UT",
+	year = "2017",
+	month = "9"}
+
+@article{sugino2017spie,
+	author = "Christopher Sugino and Stephen Leadenham and Massimo Ruzzene and Alper Erturk",
+	title = "Piezoelectric metamaterials with synthetic impedance shunts",
+	journal = "Proceedings of the 24th SPIE Annual International Symposium on Smart Structures and Materials {\&} Nondestructive Evaluation and Health Monitoring, Portland, OR",
+	year = "2017",
+	month = "3"}
+
+@article{sugino2016smasis,
+	author = "Christopher Sugino and Stephen Leadenham and Massimo Ruzzene and Alper Erturk",
+	title = "Electroelastic bandgap formation in locally resonant metamaterial beams with piezoelectric shunts: a modal analysis approach",
+	journal = "Proceedings of the 9th ASME Conference on Smart Materials, Adaptive Structures and Intelligent Systems, Stowe, VT",
+	year = "2016",	
+	month = "9"}
+
+@article{sugino2016idetc,
+	author = "Christopher Sugino and Stephen Leadenham and Massimo Ruzzene and Alper Erturk",
+	title = "Modal analysis of bandgap formation for vibration attenuation in locally resonant finite beams",
+	journal = "Proceedings of the ASME 2016 IDETC 28th Biennial Conference on Mechanical Vibration and Noise, Charlotte, NC",
+	year = "2016",
+	month = "8"}
+
+@article{present2019ses,
+	author = "Christopher Sugino and Massimo Ruzzene and Alper Erturk",
+	title = "Lamb wave propagation in human skull: Analysis of leaky modes and equivalent properties",
+	journal = "Keynote Presentation, 2019 SES Conference, St.\ Louis, MO",
+	year = "2019"
 }
