Update profiles, pubs

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,8 @@
 	year={2025},
 	publisher={APS},
 	month = "1",
-	url = {https://doi.org/10.1103/PhysRevApplied.23.014028}
+	url = {https://doi.org/10.1103/PhysRevApplied.23.014028},
+	selected={true}
 }
 
 @article{allamUltrasonic,
@@ -166,7 +167,9 @@
 	volume = "182-183",
 	pages = "281 - 294",
 	journal = "International Journal of Solids and Structures",
-	url = {https://doi.org/10.1016/j.ijsolstr.2019.08.011}}
+	url = {https://doi.org/10.1016/j.ijsolstr.2019.08.011},
+	selected={true}
+	}
 
 @article{sugino,
 	author = "Christopher Sugino and Stephen Leadenham and Massimo Ruzzene and Alper Erturk",
@@ -198,7 +201,8 @@
 	pages = "104--123 (2021 Doak Award)",
 	year = "2017",
 	month = "10",
-	url = {https://doi.org/10.1016/j.jsv.2017.06.004}}
+	url = {https://doi.org/10.1016/j.jsv.2017.06.004},
+	selected={true}}
 
 @article{sugino2018design,
 	author = "Christopher Sugino and Massimo Ruzzene and Alper Erturk",
