--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,7 @@
 	year={2025},
 	publisher={APS},
 	month = "1",
-	url = {https://doi.org/10.1103/PhysRevApplied.23.014028},
+	website = {https://doi.org/10.1103/PhysRevApplied.23.014028},
 	selected={true}
 }
 
@@ -246,108 +246,3 @@
 	year = "2018",
 	month = "9",
 	url = {https://doi.org/10.1063/1.5031168}}
-
-@article{sugino2020ius,
-	author = "Christopher Sugino and Romain Gerbe and Charles Reinke and Massimo Ruzzene and Alper Erturk and Ihab El-Kady",
-	title = "Ultrasonic Communication through a Metallic Barrier: Transmission Modeling and Crosstalk Minimization",
-	journal = "2020 IEEE International Ultrasonics Symposium (IUS)",
-	year = "2020",
-	month = "3"
-}
-
-
-@article{sugino2019imac1,
-	author = "Christopher Sugino and Massimo Ruzzene and Alper Erturk",
-	title = "Characterization of Lamb Wave Propagation in Human Skull via Scanning LDV",
-	journal = " Proceedings of IMAC-XXXVII, Houston, TX",
-	year = "2019",
-	month = "3"
-}
-
-@article{sugino2021spie1,
-	author = "Christopher Sugino and Mustafa Alshaqaq and Alper Erturk",
-	title = "Programmable Piezoelectric Acoustic Black Hole for Wavelength Control and Enhanced Sensing",
-	journal = "Proceedings of the 28th SPIE Annual International Symposium on Smart Structures and Materials {\&} Nondestructive Evaluation and Health Monitoring",
-	year = "2021",
-	month = "5" }
-
-@article{sugino2021spie2,
-	author = "Mustafa Alshaqaq and Christopher Sugino and  Alper Erturk",
-	title = "Rainbow trapping of elastic waves in a programmable metamaterial beam",
-	journal = "Proceedings of the 28th SPIE Annual International Symposium on Smart Structures and Materials {\&} Nondestructive Evaluation and Health Monitoring",
-	year = "2021",
-	month = "4" }
-
-@article{sugino2021spie3,
-	author = "Mohid Khattak and Christopher Sugino and Alper Erturk",
-	title = "Experimental and numerical investigation of piezoelectric energy harvesting on a locally resonant metastructure",
-	journal = "Proceedings of the 28th SPIE Annual International Symposium on Smart Structures and Materials {\&} Nondestructive Evaluation and Health Monitoring",
-	year = "2021",
-	month = "3" }
-
-
-@article{sugino2019spie,
-	author = "Christopher Sugino and Massimo Ruzzene and Alper Erturk",
-	title = "An analytical framework for Kirchhoff plate-type locally resonant piezoelectric metastructures",
-	journal = "Proceedings of the 26th SPIE Annual International Symposium on Smart Structures and Materials {\&} Nondestructive Evaluation and Health Monitoring, Denver, CO",
-	year = "2019",
-	month = "3"
-}
-
-
-@article{sugino2018spie,
-	author = "Christopher Sugino and Alper Erturk",
-	title = "Dispersion tailoring in varying-inductance piezoelectric metamaterials",
-	journal = "Proceedings of the 25th SPIE Annual International Symposium on Smart Structures and Materials {\&} Nondestructive Evaluation and Health Monitoring, Denver, CO",
-	year = "2018",
-	month = "3"
-}
-
-@article{sugino2017eccomas,
-	author = "Christopher Sugino and Massimo Ruzzene and Alper Erturk",
-	title = "Merging Mechanical and Electromechanical Locally Resonant Bandgaps in Metamaterials",
-	journal = "Proceedings of the 8th ECCOMAS Thematic Conference on Smart Structures and Materials, Madrid, Spain",
-	year = "2017",
-	month = "6"}
-
-@article{sugino2017smasis,
-	author = "Christopher Sugino and Massimo Ruzzene and Alper Erturk",
-	title ="Dynamics of hybrid mechanical-electromechanical locally resonant metastructures",
-	journal = "Proceedings of the 10th ASME Conference on Smart Materials, Adaptive Structures and Intelligent Systems, Snowbird, UT",
-	year = "2017",
-	month = "9"}
-
-@article{sugino2017asmasis,
-	author = "Christopher Sugino and Vinciane Guillot and Alper Erturk",
-	title = "Multifunctional Energy Harvesting Locally Resonant Metastructures",
-	journal = "Proceedings of the 10th ASME Conference on Smart Materials, Adaptive Structures, and Intelligent Systems, Snowbird, UT",
-	year = "2017",
-	month = "9"}
-
-@article{sugino2017spie,
-	author = "Christopher Sugino and Stephen Leadenham and Massimo Ruzzene and Alper Erturk",
-	title = "Piezoelectric metamaterials with synthetic impedance shunts",
-	journal = "Proceedings of the 24th SPIE Annual International Symposium on Smart Structures and Materials {\&} Nondestructive Evaluation and Health Monitoring, Portland, OR",
-	year = "2017",
-	month = "3"}
-
-@article{sugino2016smasis,
-	author = "Christopher Sugino and Stephen Leadenham and Massimo Ruzzene and Alper Erturk",
-	title = "Electroelastic bandgap formation in locally resonant metamaterial beams with piezoelectric shunts: a modal analysis approach",
-	journal = "Proceedings of the 9th ASME Conference on Smart Materials, Adaptive Structures and Intelligent Systems, Stowe, VT",
-	year = "2016",	
-	month = "9"}
-
-@article{sugino2016idetc,
-	author = "Christopher Sugino and Stephen Leadenham and Massimo Ruzzene and Alper Erturk",
-	title = "Modal analysis of bandgap formation for vibration attenuation in locally resonant finite beams",
-	journal = "Proceedings of the ASME 2016 IDETC 28th Biennial Conference on Mechanical Vibration and Noise, Charlotte, NC",
-	year = "2016",
-	month = "8"}
-
-@article{present2019ses,
-	author = "Christopher Sugino and Massimo Ruzzene and Alper Erturk",
-	title = "Lamb wave propagation in human skull: Analysis of leaky modes and equivalent properties",
-	journal = "Keynote Presentation, 2019 SES Conference, St.\ Louis, MO",
-	year = "2019"
-}
