--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,4 +1,5 @@
 @article{khan2025elastic,
+	abbr={PRApplied},
 	title={Elastic nonreciprocity via nonreciprocal hybridization and destructive interference},
 	author={Khan, Muhammad Bilal and Sugino, Christopher},
 	journal={Physical Review Applied},
@@ -7,23 +8,26 @@
 	pages={014028},
 	year={2025},
 	publisher={APS},
-	month = "1",
-	website = {https://doi.org/10.1103/PhysRevApplied.23.014028},
+	month = "Jan",
+	doi = {10.1103/PhysRevApplied.23.014028},
 	selected={true}
 }
 
 @article{allamUltrasonic,
+	abbr={Ultrasonics},
 	author = "Ahmed Allam and Obaidullah Alfahmi and Herit Patel and Christopher Sugino and Matthew Harding and Massimo Ruzzene and Alper Erturk",
 	title = "Ultrasonic testing of thick and thin {Inconel} 625 Alloys manufactured by laser powder bed fusion",
 	journal = "Ultrasonics",
 	volume = "125",
 	pages = "106780",
 	year = "2022",
-	month = "9",
+	month = "Sept",
+	doi = {10.1016/j.ultras.2022.106780},
 	url = "https://doi.org/10.1016/j.ultras.2022.106780"}
 
 
 @article{thomes2023programmable,
+	abbr={PRApplied},
 	title={Programmable Moving Defect for Spatiotemporal Wave Localization in Piezoelectric Metamaterials},
 	author={Thomes, Renan L and Beli, Danilo and Sugino, Christopher and Erturk, Alper and Junior, Carlos De Marqui},
 	journal={Physical Review Applied},
@@ -32,11 +36,13 @@
 	pages={064031},
 	year={2023},
 	publisher={APS},
-	month = "6",
+	month = "June",
+	doi = {10.1103/PhysRevApplied.19.064031},
 	url = {https://doi.org/10.1103/PhysRevApplied.19.064031}
 }
 
 @article{alfahmi2022duffing,
+	abbr = {SMS},
 	title={Duffing-type digitally programmable nonlinear synthetic inductance for piezoelectric structures},
 	author={Alfahmi, Obaidullah and Sugino, Christopher and Erturk, Alper},
 	journal={Smart Materials and Structures},
@@ -45,21 +51,25 @@
 	pages={095044},
 	year={2022},
 	publisher={IOP Publishing},
-	month = "8",
+	month = "Aug",
+	doi = {10.1088/1361-665X/ac858b},
 	url = {https://doi.org/10.1088/1361-665X/ac858b}
 }
 
 @article{suginoSpatially,
+	abbr={PRB},
 	author = "Christopher Sugino and Mustafa Alshaqaq and Alper Erturk",
 	title = "Spatially programmable wave compression and signal enhancement in a piezoelectric metamaterial waveguide",
 	journal = "Physical Review B",
 	volume = "106",
 	year = "2022",
-	month = "11",
+	month = "Nov",
 	pages = "174304",
+	doi = {10.1103/PhysRevB.106.174304},
 	url = {https://doi.org/10.1103/PhysRevB.106.174304}}
 
 @article{alshaqaq2023digital,
+	abbr={PRResearch},
 	title={Digital programming of reciprocity breaking in resonant piezoelectric metamaterials},
 	author={Alshaqaq, Mustafa and Sugino, Christopher and Erturk, Alper},
 	journal={Physical Review Research},
@@ -68,67 +78,83 @@
 	pages={043003},
 	year={2023},
 	publisher={APS},
-	url = "https://doi.org/10.1103/PhysRevResearch.5.043003"
+	doi = {10.1103/PhysRevResearch.5.043003},
+	url = "https://doi.org/10.1103/PhysRevResearch.5.043003",
+	month = "Oct"
 }
 
 @article{allam2024portable,
+	abbr={Ultrasonics},
 	title={Portable through-metal ultrasonic power transfer using a dry-coupled detachable transmitter},
 	author={Allam, A and Patel, H and Sugino, C and John, C St and Steinfeldt, J and Reinke, C and Erturk, A and El-kady, I},
 	journal={Ultrasonics},
 	pages={107339},
 	year={2024},
+	month = {May},
 	publisher={Elsevier},
+	doi = {10.1016/j.ultras.2024.107339},
 	url = "https://doi.org/10.1016/j.ultras.2024.107339"
 }
 
 @article{alshaqaqProgrammable,
+	abbr={PRApplied},
 	author = "Mustafa Alshaqaq and Christopher Sugino and Alper Erturk",
 	title = "Programmable Rainbow Trapping and Band-Gap Enhancement via Spatial Group-Velocity Tailoring in Elastic Metamaterials",
 	journal = "Physical Review Applied",
 	year = "2022",
-	month = "2",
+	month = "Feb",
 	volume = "17",
+	doi = {10.1103/PhysRevApplied.17.L021003},
 	url = {https://doi.org/10.1103/PhysRevApplied.17.L021003}
 }
 
 @article{khattakConcurrent,
+	abbr={JIMSS},
 	author = "Mohid Muneeb Khattak and Christopher Sugino and Alper Erturk",
 	title = "Concurrent vibration attenuation and low-power electricity generation in a locally resonant metastructure",
 	journal = "Journal of Intelligent Material Systems and Structures",
 	year = "2022",
-	month = "1",
+	month = "Jan",
+	doi = {10.1177/1045389X211072517},
 	url = {https://doi.org/10.1177/1045389X211072517}}
 
 @article{suginoMachined,
+	abbr={APL},
 	author = "Christopher Sugino and Romain Gerbe and Ehren Baca and Charles Reinke and Massimo Ruzzene and Alper Erturk and Ihab {El-kady}",
 	title = "Machined phononic crystals to block high-order {L}amb waves and crosstalk in through-metal ultrasonic communication systems",
 	journal = "Applied Physics Letters",
 	year = "2022",
 	volume = "120",
-	month = "5",
+	month = "May",
+	doi = {10.1063/5.0083380},
 	url = {https://doi.org/10.1063/5.0083380}
 }
 
 @article{allamPhasedArray,
+	abbr={JNDE},
 	author = "Ahmed Allam and Christopher Sugino and Matthew Harding and Paul Bishop and Alper Erturk and Massimo Ruzzene",
 	title = "Phased array ultrasonic testing of Inconel 625 produced by selective laser melting",
 	journal = "ASME Journal of Nondestructive Evaluation, Diagnostics, and Prognostics of Engineering Systems",
 	year = "2021",
 	volume = "4",
 	number = "4",
-	month = "5",
+	month = "May",
+	doi = {10.1115/1.4050963},
 	url = {https://doi.org/10.1115/1.4050963}}
 
 @article{suginoReciprocal,
+	abbr={PRB},
 	author = "Christopher Sugino and Massimo Ruzzene and Alper Erturk",
 	title = "Nonreciprocal piezoelectric metamaterial framework and circuit strategies",
 	journal = "Physical Review B",
 	volume = "102",
 	year = "2020",
-	month = "7",
+	month = "July",
+	doi = {10.1103/PhysRevB.102.014304},
 	url = {https://doi.org/10.1103/PhysRevB.102.014304}}
 
 @article{mazzotiExperimental,
+	abbr={Ultrasonics},
 	author = "Matteo Mazzoti and Christopher Sugino and Eetu Kohtanen and Alper Erturk and Massimo Ruzzene",
 	title = "Experimental identification of high order Lamb waves and estimation of the mechanical properties of a dry human skull",
 	journal = "Ultrasonics",
@@ -136,9 +162,11 @@
 	pages = "106343",
 	url = {https://doi.org/10.1016/j.ultras.2020.106343},
 	year = "2021",
-	month = "5"}
+	doi = {10.1016/j.ultras.2020.106343},
+	month = "May"}
 
 @article{suginoSynth,
+	abbr={PRApplied},
 	author = "Christopher Sugino and Massimo Ruzzene and Alper Erturk",
 	title = "Digitally programmable resonant elastic metamaterials",
 	journal = "Physical Review Applied",
@@ -146,43 +174,52 @@
 	number = "6",
 	pages={061001},
 	year = "2020",
-	month = "6",
+	month = "June",
+	doi = {10.1103/PhysRevApplied.13.061001},
 	url = {https://doi.org/10.1103/PhysRevApplied.13.061001}}
 
 @article{suginoSkull,
+	abbr={UMB},
 	author = "Christopher Sugino and Massimo Ruzzene and Alper Erturk",
 	title = "Experimental and computational investigation of guided waves in a human skull",
 	journal = "Ultrasound in Medicine and Biology",
 	volume = "47",
 	number = "3",
 	year = "2020",
-	month = "12",
+	month = "Dec",
+	doi = {10.1016/j.ultrasmedbio.2020.11.019},
 	url = {https://doi.org/10.1016/j.ultrasmedbio.2020.11.019}}
 
 @article{suginoIJSS,
+	abbr={IJSS},
 	author = "Christopher Sugino and Massimo Ruzzene and Alper Erturk",
 	title = "An analytical framework for bandgap formation in locally resonant piezoelectric metamaterial plates",
 	year = "2019",
-	month = "8",
+	month = "Aug",
 	volume = "182-183",
 	pages = "281 - 294",
 	journal = "International Journal of Solids and Structures",
 	url = {https://doi.org/10.1016/j.ijsolstr.2019.08.011},
+	doi = {10.1016/j.ijsolstr.2019.08.011},
 	selected={true}
 	}
 
 @article{sugino,
+	abbr={J. Appl. Phys.},
 	author = "Christopher Sugino and Stephen Leadenham and Massimo Ruzzene and Alper Erturk",
 	title = "On the mechanism of bandgap formation in locally resonant finite elastic metamaterials",
 	year = "2016",
 	volume = "120",
 	number = "13",
+	month = "Oct",
 	pages = "134501",
 	journal = "Journal of Applied Physics",
+	doi = {10.1063/1.4963648},
 	url = {https://doi.org/10.1063/1.4963648}
 }
 
 @article{sugino2,
+	abbr={SMS},
 	author = "Christopher Sugino and Stephen Leadenham and Massimo Ruzzene and Alper Erturk",
 	title = "An investigation of electroelastic bandgap formation in locally resonant piezoelectric metastructures",
 	year = "2017",
@@ -190,42 +227,50 @@
 	volume = "26",
 	number = "5",
 	pages = "055029",
-	month = "4",
+	month = "Apr",
+	doi = {10.1088/1361-665X/aa6671},
 	url = {https://doi.org/10.1088/1361-665X/aa6671}}
 
 @article{sugino3,
+	abbr={JSV},
 	author = "Christopher Sugino and Yiwei Xia and Stephen Leadenham and Massimo Ruzzene and Alper Erturk",
 	title = "A general theory for bandgap estimation in locally resonant metastructures",
 	journal = "Journal of Sound and Vibration",
 	volume = "406",
 	pages = "104--123 (2021 Doak Award)",
 	year = "2017",
-	month = "10",
+	month = "Oct",
+	doi = {10.1016/j.jsv.2017.06.004},
 	url = {https://doi.org/10.1016/j.jsv.2017.06.004},
 	selected={true}}
 
 @article{sugino2018design,
+	abbr={TMECH},
 	author = "Christopher Sugino and Massimo Ruzzene and Alper Erturk",
 	title = "Design and analysis of piezoelectric metamaterial beams with synthetic impedance shunt circuits",
 	journal = "IEEE/ASME Transactions on Mechatronics",
 	volume = "23",
 	year = "2018",
-	month = "12",
+	month = "Dec",
 	pages = "2144--2155",
+	doi = {10.1109/TMECH.2018.2863257},
 	url = {https://doi.org/10.1109/TMECH.2018.2863257}}
 
 @article{sugino2018Merging,
+	abbr={JMPS},
 	author = "Christopher Sugino and Massimo Ruzzene and Alper Erturk",
 	title = "Merging mechanical and electromechanical bandgaps in locally resonant metamaterials and metastructures",
 	journal = "Journal of the Mechanics and Physics of Solids",
 	year = "2018",
 	volume = "116",
 	pages = "323--333",
-	month = "7",
+	month = "July",
+	doi = {10.1016/j.jmps.2018.04.005},
 	url = {https://doi.org/10.1016/j.jmps.2018.04.005}}
 
 
 @article{sugino2018analysis,
+	abbr = {J. Phys. D},
 	author = "Christopher Sugino and Alper Erturk",
 	title = "Analysis of multifunctional piezoelectric metastructures for low-frequency bandgap formation and energy harvesting",
 	journal = "Journal of Physics D: Applied Physics",
@@ -233,10 +278,12 @@
 	volume = "51",
 	issue = "21",
 	pages = "215103",
-	month = "5",
+	month = "May",
+	doi = {10.1088/1361-6463/aab97e},
 	url = {https://doi.org/10.1088/1361-6463/aab97e}}
 
 @article{sousa2018adaptive,
+	abbr={J. Appl. Phys.},
 	author = "Vagner {Candido de Sousa} and Christopher Sugino and De Marqui, Jr., Carlos and Alper Erturk",
 	title = "Adaptive locally resonant metamaterials leveraging shape memory alloys",
 	journal = "Journal of Applied Physics",
@@ -244,5 +291,6 @@
 	issue = "6",
 	pages = "064505",
 	year = "2018",
-	month = "9",
+	month = "Sept",
+	doi = {10.1063/1.5031168},
 	url = {https://doi.org/10.1063/1.5031168}}
